--- a/render.yaml
+++ b/render.yaml
@@ -47,6 +47,10 @@ services:
       # To be safe, we add it here.
       - key: NEXT_PUBLIC_API_URL
         value: /api
+      - key: DATABASE_URL
+        fromDatabase:
+          name: codiq-db
+          property: connectionString
       - key: NODE_ENV
         value: production
 
